--- a/root/vercel.json
+++ b/root/vercel.json
@@ -7,7 +7,7 @@
   },
   "routes": [
     { "src": "/(.*\\.php)", "dest": "/$1" },
-    { "src": "/(.*)", "dest": "/index.php" }
+    { "src": "/(.*)", "dest": "/api/index.php" }
   ],
   "env": {
     "NOW_PHP_DEBUG": "1"
