--- a/root/vercel.json
+++ b/root/vercel.json
@@ -6,7 +6,7 @@
     }
   },
   "routes": [
-    { "src": "/(.*\\.php)", "dest": "/$1" },
+    { "src": "/(.*\\.php)", "dest": "/api/$1" },
     { "src": "/(.*)", "dest": "/api/index.php" }
   ],
   "env": {
