--- a/root/vercel.json
+++ b/root/vercel.json
@@ -7,7 +7,7 @@
       }
     },
     "routes": [
-      { "src": "/(.*\\.php)", "dest": "/api/$1" },
+      { "src": "/(.*\\.php)", "dest": "/api/$1.php" },
       { "src": "/(.*)", "dest": "/api/index.php" }
     ],
     "env": {
