--- a/root/vercel.json
+++ b/root/vercel.json
@@ -1,16 +1,14 @@
-
-  {
+{
     "version": 2,
     "functions": {
-      "*.php": {
-        "runtime": "vercel-php@0.6.0"
+      "api/*.php": {
+        "runtime": "vercel-php@0.7.1"
       }
     },
     "routes": [
-      { "src": "/(.*\\.php)", "dest": "/api/$1.php" },
+      { "src": "/(.*)\\.php$", "dest": "/api/$1.php" },
       { "src": "/(.*)", "dest": "/api/index.php" }
-    ],
-    "env": {
-      "NOW_PHP_DEBUG": "1"
-    }
+    ]
   }
+
+ 
